Ajustes das tags do thymeleaf nas telas e criação do WebConfig

--- a/controle-estoque-web/src/main/resources/templates/produtos-form.html
+++ b/controle-estoque-web/src/main/resources/templates/produtos-form.html
@@ -1,6 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1" pageEncoding="ISO-8859-1"%>
-<%@ taglib uri="http://www.springframework.org/tags/form" prefix="form"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
@@ -9,9 +6,7 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Controle de Estoque</title>
-	<link href="<c:url value="/resources/css/bootstrap.min.css" />" rel="stylesheet">
-	<script src="<c:url value="/resources/js/jquery-1.11.1.min.js" />"></script>
-	<script src="<c:url value="/resources/js/bootstrap.min.js" />"></script>
+	<link rel="stylesheet" type="text/css" th:ref= "@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<div class="container">
@@ -22,46 +17,50 @@
 					<div class="panel-title">Add Produto</div>
 				</div>
 				<div class="panel-body">
-					<form:form action="salvarProduto" cssClass="form-horizontal" method="post" modelAttribute="produto">
+					<form action="#" th:action="@{/salvarProduto}" class="form-horizontal" 
+					method="post" th:object="${produto}">
 
 						<!-- need to associate this data with produto id -->
-						<form:hidden path="id" />
+						<input type="hidden" th:field="*{id}"/>
 
 						<div class="form-group">
 							<label for="nome" class="col-md-3 control-label">Nome</label>
 							<div class="col-md-9">
-								<form:input path="nome" cssClass="form-control" />
+								<input th:field="*{nome}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="preco" class="col-md-3 control-label">Preço</label>
 							<div class="col-md-9">
-								<form:input path="preco" cssClass="form-control" />
+								<input th:field="*{preco}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="categoria" class="col-md-3 control-label">Categoria</label>
 							<div class="col-md-9">
-								<form:input path="categoria" cssClass="form-control" />
+								<input th:field="*{categoria}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="fornecedor" class="col-md3 control-label">Fornecedor</label>
 							<div class="col-md-9">
-								<form:input path="fornecedor" cssClass="form-control"/>
+								<input th:field="*{fornecedor}" class="form-control"/>
 							</div>
 						</div>
 
 						<div class="form-group">
 							<div class="col-md-offset-3 col-md-9">
-								<form:button cssClass="btn btn-primary">Submit</form:button>
+								<button class="btn btn-primary">Submit</button>
 							</div>
 						</div>
 
-					</form:form>
+					</form>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript" th:src="@{js/jquery-1.11.1.min.js}" /></script>
+	<script type="text/javascript" th:src="@{js/bootstrap.min.js}" /></script>
 </body>
 </html>
