--- a/controle-estoque-web/src/main/resources/templates/formProduto.html
+++ b/controle-estoque-web/src/main/resources/templates/formProduto.html
@@ -4,24 +4,27 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="default">
 <head>
-	<meta charset="ISO-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Controle de Estoque</title>
-	<link rel="stylesheet" type="text/css" th:ref= "@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" href= "/css/bootstrap.min.css" />
 </head>
 <body>
 	<div class="container">
 		<div class="col-md-offset-2 col-md-7">
-			<h3 class="text-center">Formulário de cadastro de produtos</h3>
+			<h3 class="text-center">FormulÃ¡rio de cadastro de produtos</h3>
 			<div class="panel panel-info">
 				<div class="panel-heading">
 					<div class="panel-title">Add Produto</div>
 				</div>
 				<div class="panel-body">
-					<form action="#" th:action="@{/salvarProduto}" class="form-horizontal" 
+					<form action="#" th:action="@{/produtos/salvarProduto}" class="form-horizontal" 
 					method="post" th:object="${produto}">
 
 						<!-- need to associate this data with produto id -->
-						<input type="hidden" th:field="*{id}"/>
+						<input type="hidden" th:field="*{databaseId}"/>
+						<input type="hidden" th:field="*{categoria.databaseId}"/>
+						<input type="hidden" th:field="*{fornecedor.databaseId}"/>
+						<input type="hidden" th:field="*{estoque.databaseId}"/>
 
 						<div class="form-group">
 							<label for="nome" class="col-md-3 control-label">Nome</label>
@@ -30,7 +33,7 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="preco" class="col-md-3 control-label">Preço</label>
+							<label for="preco" class="col-md-3 control-label">PreÃ§o</label>
 							<div class="col-md-9">
 								<input th:field="*{preco}" class="form-control" />
 							</div>
@@ -38,19 +41,19 @@
 						<div class="form-group">
 							<label for="categoria" class="col-md-3 control-label">Categoria</label>
 							<div class="col-md-9">
-								<input th:field="*{categoria}" class="form-control" />
+								<input th:field="*{categoria.nome}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="fornecedor" class="col-md3 control-label">Fornecedor</label>
 							<div class="col-md-9">
-								<input th:field="*{fornecedor}" class="form-control"/>
+								<input th:field="*{fornecedor.nome}" class="form-control"/>
 							</div>
 						</div>
 
 						<div class="form-group">
 							<div class="col-md-offset-3 col-md-9">
-								<button class="btn btn-primary">Submit</button>
+								<button class="btn btn-primary">Confirmar</button>
 							</div>
 						</div>
 
@@ -60,7 +63,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" th:src="@{js/jquery-1.11.1.min.js}" /></script>
-	<script type="text/javascript" th:src="@{js/bootstrap.min.js}" /></script>
+	<script type="text/javascript" src="/js/jquery-3.4.1.min.js" /></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js" /></script>
 </body>
 </html>
