--- a/controle-estoque-web/src/main/resources/templates/listaProdutos.html
+++ b/controle-estoque-web/src/main/resources/templates/listaProdutos.html
@@ -4,9 +4,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="default">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Controle de Estoque</title>
-	<link rel="stylesheet" type="text/css" th:ref= "@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" href= "/css/bootstrap.min.css" />
 </head>
 <body>
 	<div class="container">
@@ -14,19 +14,20 @@
 			<h3 class="text-center">Tela de consulta de produtos</h3>
 			<hr />
 
-			<input type="button" value="Add Produto" onclick="window.location.href='showForm'; return false;" class="btn btn-primary" /> <br /> <br />
+			<input type="button" value="Add Produto" onclick="window.location.href='adicionarProduto'; return false;" class="btn btn-primary" /> <br /> <br />
 			<div class="panel panel-info">
 				<div class="panel-heading">
-					<div class="panel-title">Relação dos Produtos</div>
+					<div class="panel-title">RelaÃ§Ã£o dos Produtos</div>
 				</div>
 				<div class="panel-body">
 					<table class="table table-striped table-bordered">
 						<tr>
 							<th>Nome</th>
-							<th>Preço</th>
+							<th>PreÃ§o</th>
 							<th>Categoria</th>
 							<th>Fornecedor</th>
 							<th>Quantidade em Estoque</th>
+							<th>AÃ§Ã£o</th>
 						</tr>
 						<tr th:each="produto : ${listaProdutos}">
 							<td th:text="${produto.nome}"></td>
@@ -36,8 +37,8 @@
 							<td th:text="${produto.estoque.quantidade}"></td>
 							<td> 
 								<div class="btn-group pull-right">
-									<a class="btn btn-sm btn-primary" th:href="@{/edit/{id}(id=${post.id})}" >Editar</a>
-								   	<a class="delete btn btn-sm btn-danger" th:href="@{/delete/{id}(id=${post.id})}">Excluir</a>
+									<a class="btn btn-sm btn-primary" th:href="@{/produtos/alterarProduto/{produtoId}(produtoId=${produto.databaseId})}" >Editar</a>
+								   	<a class="delete btn btn-sm btn-danger" th:href="@{/produtos/deletaProduto/{produtoId}(produtoId=${produto.databaseId})}">Excluir</a>
 								</div>
 							</td>
 						</tr>
@@ -48,11 +49,10 @@
 
 	</div>
 	<div class="footer">
-		<p>Footer</p>
+		<script type="text/javascript" src="/js/jquery-1.11.1.min.js" /></script>
+		<script type="text/javascript" src="/js/bootstrap.min.js" /></script>
 	</div>
 	
-	<script type="text/javascript" th:src="@{js/jquery-1.11.1.min.js}" /></script>
-	<script type="text/javascript" th:src="@{js/bootstrap.min.js}" /></script>
 </body>
 
 </html>
