--- a/controle-estoque-web/src/main/resources/templates/fornecedor/exibirFornecedores.html
+++ b/controle-estoque-web/src/main/resources/templates/fornecedor/exibirFornecedores.html
@@ -14,7 +14,7 @@
 			<h3 class="text-center">Tela de consulta de Fornecedores</h3>
 			<hr />
 
-			<input type="button" value="Adicionar Fornecedor" onclick="window.location.href='/fornecedor/adicionarFornecedor'; return false;" class="btn btn-primary" /> <br /> <br />
+			<input type="button" value="Adicionar Fornecedor" onclick="window.location.href='/fornecedores/adicionarFornecedor'; return false;" class="btn btn-primary" /> <br /> <br />
 			<div class="panel panel-info">
 				<div class="panel-heading">
 					<div class="panel-title">Listagem dos Fornecedores</div>
@@ -27,15 +27,15 @@
 							<th>Telefone</th>
 							<th>Ação</th>
 						</tr>
-						<tr th:each="fornecedor : ${listaFornecedores}">
+						<tr th:each="fornecedor : ${fornecedores}">
 							<td th:text="${fornecedor.nome}"></td>
 							<td th:text="${fornecedor.cidade}"></td>
 							<td th:text="${fornecedor.telefone}"></td>
 
 							<td> 
 								<div class="btn-group pull-right">
-									<a class="btn btn-sm btn-primary" th:href="@{/fornecedor/editarFornecedor/{id}(id=${fornecedor.id})}" >Editar</a>
-								   	<a class="delete btn btn-sm btn-danger" th:href="@{/fornecedor/removerFornecedor/{id}(id=${fornecedor.id})}">Excluir</a>
+									<a class="btn btn-sm btn-primary" th:href="@{/fornecedores/editarFornecedor/{id}(id=${fornecedor.id})}" >Editar</a>
+								   	<a class="delete btn btn-sm btn-danger" th:href="@{/fornecedores/removerFornecedor/{id}(id=${fornecedor.id})}">Excluir</a>
 								</div>
 							</td>
 						</tr>
