--- a/controle-estoque-web/src/main/resources/templates/inventario/editarEstoque.html
+++ b/controle-estoque-web/src/main/resources/templates/inventario/editarEstoque.html
@@ -14,44 +14,39 @@
 			<h3 class="text-center">Formulário de cadastro de produtos</h3>
 			<div class="panel panel-info">
 				<div class="panel-heading">
-					<div class="panel-title">Adicionar Produto</div>
+					<div class="panel-title">Editar Estoque</div>
 				</div>
 				<div class="panel-body">
-					<form action="#" th:action="@{/produtos/salvarProduto}" class="form-horizontal" 
-					method="post" th:object="${produto}">
+					<form action="#" th:action="@{/inventarios/salvarEstoque}" class="form-horizontal" 
+					method="post" th:object="${estoque}">
 
-						<!-- need to associate this data with produto id -->
 						<input type="hidden" th:field="*{id}"/>
-						<input type="hidden" th:field="*{produto.estoque.id}"/>
-
 						<div class="form-group">
-							<label for="nome" class="col-md-3 control-label">Nome</label>
+							<label for="lote" class="col-md-3 control-label">Lote</label>
 							<div class="col-md-9">
-								<input th:field="*{nome}" class="form-control" />
+								<input th:field="*{lote}" class="form-control" />
+							</div>
+							<label for="lote" class="col-md-3 control-label">Bloqueado</label>
+							<div class="col-md-9">
+								<input type="checkbox" name="bloqueado" th:checked="${bloqueado}"/>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="preco" class="col-md-3 control-label">Preço</label>
+							<label for="quantidade" class="col-md-3 control-label">Quantidade</label>
 							<div class="col-md-9">
-								<input th:field="*{preco}" class="form-control" />
+								<input th:field="*{quantidade}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="categoria" class="col-md-3 control-label">Categoria</label>			
+							<label for="minimo" class="col-md-3 control-label">Mínimo</label>
 							<div class="col-md-9">
-							   	<select th:field="*{categoria}" class="form-control">
-							   	  <option value=""> -- </option>
-								  <option th:each="categoria : ${listaCategorias}" th:value="${categoria.id}" th:utext="${categoria.nome}"> </option>
-								</select>
+								<input th:field="*{minimo}" class="form-control" />
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="fornecedor" class="col-md3 control-label">Fornecedor</label>
+							<label for="maximo" class="col-md3 control-label">Máximo</label>
 							<div class="col-md-9">
-							   	<select th:field="*{fornecedor}" class="form-control">
-							   	  <option value=""> -- </option>
-								  <option th:each="fornecedor : ${listaFornecedores}" th:value="${fornecedor.id}" th:utext="${fornecedor.nome}"> </option>
-								</select>
+								<input th:field="*{maximo}" class="form-control"/>
 							</div>
 						</div>
 
