--- a/controle-estoque-web/src/main/resources/templates/produto/exibirProdutos.html
+++ b/controle-estoque-web/src/main/resources/templates/produto/exibirProdutos.html
@@ -37,9 +37,9 @@
 							<td th:text="${produto.estoque.quantidade}"></td>
 							<td> 
 								<div class="btn-group pull-right">
-									<a class="btn btn-sm btn-primary" th:href="@{/produtos/editarProduto/{id}(produtoId=${produto.id})}" >Editar</a>
-								   	<a class="delete btn btn-sm btn-danger" th:href="@{/produtos/deletarProduto/{id}(produtoId=${produto.id})}">Excluir</a>
-								   	<a class="btn btn-sm btn-warning" th:href="@{/estoques/editarEstoque/{id}(id=${produto.estoque.id})}">Estoque</a>
+									<a class="btn btn-sm btn-primary" th:href="@{/produtos/alterarProduto/{id}(id=${produto.id})}" >Editar</a>
+								   	<a class="delete btn btn-sm btn-danger" th:href="@{/produtos/deletarProduto/{id}(id=${produto.id})}">Excluir</a>
+								   	<a class="btn btn-sm btn-warning" th:href="@{/inventarios/editarEstoque/{id}(id=${produto.estoque.id})}">Estoque</a>
 								</div>
 							</td>
 						</tr>
