--- a/controle-estoque-web/src/main/resources/templates/produto/exibirProdutos.html
+++ b/controle-estoque-web/src/main/resources/templates/produto/exibirProdutos.html
@@ -46,6 +46,14 @@
 					</table>
 				</div>
 			</div>
+			
+			<button type="button" class="btn btn-primary" onclick="window.location.href='/produtos/listar'; return false;">Produtos</button>
+			<button type="button" class="btn btn-primary" onclick="window.location.href='/inventarios/listar'; return false;">Inventário</button>
+			<button type="button" class="btn btn-secondary" onclick="window.location.href='/categorias/listar'; return false;">Categorias</button>
+			<button type="button" class="btn btn-secondary" onclick="window.location.href='/fornecedores/listar'; return false;">Fornecedores</button>
+			<button type="button" class="btn btn-secondary" onclick="window.location.href='/clientes/listar'; return false;">Clientes</button>
+			<button type="button" class="btn btn-success" onclick="window.location.href='/vendas/listar'; return false;">Vendas</button>
+			<button type="button" class="btn btn-info" onclick="window.location.href='/admin/home'; return false;">Admin</button>
 		</div>
 
 	</div>
